--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -158,13 +158,13 @@
         <!-- Navigation Menu-->
         <ul class="navigation-menu">
 
-          <li class="has-submenu active">
-            <a routerLink="/home"><i class="ti-home"></i>Dashboard</a>
+          <li class="has-submenu" routerLinkActive="active">
+            <a routerLink="/home" ><i class="ti-home"></i>Dashboard</a>
           </li>
 
 
 
-          <li class="has-submenu">
+          <li class="has-submenu" routerLinkActive="active">
             <a href="#"><i class="ti-bookmark-alt"></i>Components</a>
             <ul class="submenu">
               <li class="has-submenu">
