--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,51 @@
-<p>
-  login works!
-</p>
+<div class="accountbg"></div>
+<div class="wrapper-page">
+
+  <div class="card">
+    <div class="card-header">
+      <h3 class="text-center">
+        <b class="waves-effect waves-light">PMS</b>
+      </h3>
+
+    </div>
+    <div class="card-body">
+
+
+      <div align="center">
+        <img src="assets/logo/TCL_logo.png" height="150" width="200">
+      </div>
+
+      <div class="p-3">
+        <form method="POST" class="form-horizontal m-t-20">
+
+
+          <div class="form-group row">
+            <div class="col-12">
+              <input id="loginId" type="text" class="form-control" placeholder="email" name="loginId"  required autofocus>
+
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <div class="col-12">
+              <input class="form-control" name="password" type="password" placeholder="Password" required>
+
+            </div>
+          </div>
+
+
+          <div class="form-group text-center row m-t-20">
+            <div class="col-12">
+              <button routerLink="/home" class="btn btn-block btn-info">Log In</button>
+
+
+            </div>
+          </div>
+
+
+        </form>
+      </div>
+
+    </div>
+  </div>
+</div>
