--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-navbar></app-navbar>
+
+  <app-navbar *ngIf="isLogIn()"></app-navbar>
+
+
 
 
   <div class="wrapper">
