--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,12 +4,11 @@
   <div class="card">
     <div class="card-header">
       <h3 class="text-center">
-        <b class="waves-effect waves-light">PMS</b>
+        <b class="waves-effect waves-light">HR Solution</b>
       </h3>
 
     </div>
     <div class="card-body">
-
 
       <div align="center">
         <img src="assets/logo/TCL_logo.png" height="150" width="200">
