--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -163,7 +163,7 @@
                 <a href="#">Forms</a>
                 <ul class="submenu">
                   <li><a routerLink="user/add">Add User</a></li>
-                  <li><a href="form-validation.html">Form Validation</a></li>
+                  <li><a routerLink="employee/add">Add Employee</a></li>
                   <li><a href="form-advanced.html">Form Advanced</a></li>
                   <li><a href="form-editors.html">Form Editors</a></li>
                   <li><a href="form-uploads.html">Form File Upload</a></li>
