--- a/src/app/components/user/add-user/add-user.component.html
+++ b/src/app/components/user/add-user/add-user.component.html
@@ -17,7 +17,7 @@
 
         <div class="form-group col-md-4">
           <label>User Type</label>
-          <select class="form-control" [(ngModel)]="userinput.type" name="type">
+          <select class="form-control" [(ngModel)]="userinput.type" name="type" required>
             <option value="1" selected>type 1</option>
             <option value="2">type 2</option>
             <option value="3">type 3</option>
@@ -27,8 +27,13 @@
         <div class="form-group col-md-4">
           <label>Contact Number</label>
           <input class="form-control" type="text" placeholder="number" name="number" [(ngModel)]="userinput.number">
-
         </div>
+
+        <div class="form-group col-md-4">
+          <label>Image</label>
+          <input type="file" name="image" class="form-control" [(ngModel)]="userinput.userImage">
+        </div>
+
         <div class="form-group col-md-12">
           <button type="submit" [disabled]="!loginForm.valid" class="btn btn-success ">insert</button>
         </div>
