--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -6,8 +6,7 @@
       <div class="logo">
 
         <a routerLink="/home" class="logo">
-          <img src="assets/images/logo-sm.png" alt="" height="22" class="logo-small">
-          <h4><b>HR Solutions</b></h4>
+          <h3>HR</h3>
         </a>
 
       </div>
@@ -164,12 +163,8 @@
                 <ul class="submenu">
                   <li><a routerLink="user/add">Add User</a></li>
                   <li><a routerLink="employee/add">Add Employee</a></li>
-                  <li><a href="form-advanced.html">Form Advanced</a></li>
-                  <li><a href="form-editors.html">Form Editors</a></li>
-                  <li><a href="form-uploads.html">Form File Upload</a></li>
-                  <li><a href="form-mask.html">Form Mask</a></li>
-                  <li><a href="form-summernote.html">Summernote</a></li>
-                  <li><a href="form-xeditable.html">Form Xeditable</a></li>
+                  <li><a routerLink="company/add">Add Company</a></li>
+                  <li><a routerLink="configuration/department/add">Add Department</a></li>
                 </ul>
               </li>
               <li class="has-submenu">
