--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,13 +1,19 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-  <app-navbar *ngIf="isLogIn()"></app-navbar>
+<app-navbar *ngIf="isLogIn()"></app-navbar>
 
 
 
 
-  <div class="wrapper">
-    <router-outlet></router-outlet>
+<div class="wrapper">
+  <div class="col-md-4">
+    <!--<app-add-department [master]="master"></app-add-department>-->
+    <!--<app-add-designaton></app-add-designaton>-->
+    <!--<app-pay-employee-salary-setup></app-pay-employee-salary-setup>-->
   </div>
+
+  <router-outlet></router-outlet>
+</div>
 
 
 
