--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,13 +3,12 @@
 <app-navbar *ngIf="isLogIn()"></app-navbar>
 
 
-
-
 <div class="wrapper">
   <div class="col-md-4">
     <!--<app-add-department [master]="master"></app-add-department>-->
     <!--<app-add-designaton></app-add-designaton>-->
     <!--<app-pay-employee-salary-setup></app-pay-employee-salary-setup>-->
+    <!--<app-add-leave></app-add-leave>-->
   </div>
 
   <router-outlet></router-outlet>
