--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -10,24 +10,27 @@
     </div>
     <div class="card-body">
 
+      <div class="alert alert-danger" [hidden]="!error">
+        {{error}}
+      </div>
+
       <div align="center">
         <img src="assets/logo/TCL_logo.png" height="150" width="200">
       </div>
 
       <div class="p-3">
-        <form method="POST" class="form-horizontal m-t-20">
+        <form #loginForm=ngForm (ngSubmit)="onSubmit()" class="form-horizontal m-t-20">
 
 
           <div class="form-group row">
             <div class="col-12">
-              <input id="loginId" type="text" class="form-control" placeholder="email" name="loginId"  required autofocus>
-
+              <input type="email" class="form-control" placeholder="email" name="email" [(ngModel)]="form.email" required autofocus>
             </div>
           </div>
 
           <div class="form-group row">
             <div class="col-12">
-              <input class="form-control" name="password" type="password" placeholder="Password" required>
+              <input class="form-control" name="password" type="password" placeholder="Password" [(ngModel)]="form.password" required>
 
             </div>
           </div>
@@ -35,7 +38,8 @@
 
           <div class="form-group text-center row m-t-20">
             <div class="col-12">
-              <button routerLink="/home" class="btn btn-block btn-info">Log In</button>
+              <!--<button class="btn btn-block btn-info">Log In</button>-->
+              <button type="submit" class="btn btn-block btn-info" [disabled]="!loginForm.valid">Sign in</button>
 
 
             </div>
