--- a/frontend/src/app/components/leave/add-leave/add-leave.component.html
+++ b/frontend/src/app/components/leave/add-leave/add-leave.component.html
@@ -3,7 +3,32 @@
     <h3 align="center" style="font-family: 'Righteous', cursive;">Leave</h3>
   </div>
   <div class="card-body">
+    <div class="row">
 
+      <div class="form-group col-md-6">
+        <label>Start Date</label>
+        <input type="date" class="form-control">
+      </div>
+
+      <div class="form-group col-md-6">
+        <label>End Date</label>
+        <input type="date" class="form-control">
+      </div>
+
+
+      <div class="form-group col-md-6">
+        <label>Leave Category</label>
+        <select class="form-control" name="fkLeaveCategory">
+          <option>Category 1</option>
+          <option>Category 2</option>
+          <option>Category 3</option>
+        </select>
+      </div>
+
+
+
+
+    </div>
   </div>
 
 </div>
