--- a/frontend/src/app/components/user/joining-info/joining-info.component.html
+++ b/frontend/src/app/components/user/joining-info/joining-info.component.html
@@ -41,6 +41,12 @@
         <input type="text" name="scheduleOutTime" placeholder="out time" class="form-control">
       </div>
 
+      <div class="form-group col-md-6">
+        <label>Special Allowance</label>
+        &nbsp;
+        <input type="checkbox" name="specialAllowance">
+      </div>
+
 
     </div>
   </div>
