--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <app-navbar *ngIf="isLogIn()"></app-navbar>
 
-
+<ngx-spinner></ngx-spinner>
 <div class="wrapper">
   <div class="col-md-4">
     <!--<app-add-department [master]="master"></app-add-department>-->
