--- a/frontend/src/app/components/company/add-company/add-company.component.html
+++ b/frontend/src/app/components/company/add-company/add-company.component.html
@@ -1,41 +1,40 @@
-<div class="container">
-  <div class="card">
+<div class="card">
     <div class="card-header-pills">  <h3 align="center" style="font-family: 'Righteous', cursive;">Add Company</h3></div>
     <div class="card-body">
       <div class="row">
         <div class="form-group col-md-6">
           <label>Company Name</label>
-          <input type="text" class="form-control" name="companyName" placeholder="name">
+          <input type="text" class="form-control" name="companyName" [(ngModel)]="companyInfo.companyName" placeholder="name">
         </div>
 
         <div class="form-group col-md-6">
           <label>Company Address</label>
-          <textarea class="form-control" name="companyAddress" placeholder="address"></textarea>
+          <textarea class="form-control" name="companyAddress" [(ngModel)]="companyInfo.companyAddress" placeholder="address"></textarea>
         </div>
 
         <div class="form-group col-md-6">
           <label>Phone</label>
-          <input type="text" class="form-control" name="phone" placeholder="+8801.....">
+          <input type="text" class="form-control" name="phone" [(ngModel)]="companyInfo.phone" placeholder="+8801.....">
         </div>
 
         <div class="form-group col-md-6">
           <label>Fax</label>
-          <input type="text" class="form-control" name="fax" placeholder="fax">
+          <input type="text" class="form-control" name="fax" [(ngModel)]="companyInfo.fax" placeholder="fax">
         </div>
 
         <div class="form-group col-md-6">
           <label>Email</label>
-          <input type="email" class="form-control" name="email" placeholder="abc@abc.com">
+          <input type="email" class="form-control" name="email" [(ngModel)]="companyInfo.email" placeholder="abc@abc.com">
         </div>
 
         <div class="form-group col-md-6">
           <label>WebSite</label>
-          <input type="text" class="form-control" name="webSite" placeholder="www">
+          <input type="text" class="form-control" name="webSite" [(ngModel)]="companyInfo.webSite" placeholder="www">
         </div>
 
         <div class="form-group col-md-6">
           <label>Logo</label>
-          <input type="file" class="form-control" name="logo">
+          <input type="file" class="form-control"  name="logo" (change)="onFileSelected($event)">
         </div>
 
         <div class="form-group col-md-6">
@@ -51,7 +50,7 @@
         </div>
 
         <div class="form-group col-md-6">
-          <button class="btn btn-success">Submit</button>
+          <button class="btn btn-success" (click)="onSubmit()">Submit</button>
         </div>
 
 
@@ -60,7 +59,6 @@
       </div>
 
     </div>
-  </div>
-
-
 </div>
+
+
