--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -115,9 +115,9 @@
               <a class="dropdown-item" href="#"><i class="dripicons-user text-muted"></i> Profile</a>
               <a class="dropdown-item" href="#"><i class="dripicons-wallet text-muted"></i> My Wallet</a>
               <a class="dropdown-item" href="#"><span class="badge badge-success pull-right m-t-5">5</span><i class="dripicons-gear text-muted"></i> Settings</a>
-              <a class="dropdown-item" href="#"><i class="dripicons-lock text-muted"></i> Lock screen</a>
+              <a class="dropdown-item" href="#" (click)="whoAmI($event)"><i class="dripicons-lock text-muted"></i> Who Am I</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#"><i class="dripicons-exit text-muted"></i> Logout</a>
+              <a class="dropdown-item" href="#" (click)="logout($event)"><i class="dripicons-exit text-muted"></i> Logout</a>
             </div>
           </li>
           <li class="menu-item list-inline-item">
@@ -209,3 +209,4 @@
   </div> <!-- end navbar-custom -->
 </header>
 <!-- End Navigation Bar-->
+
