--- a/frontend/src/app/components/company/add-company/add-company.component.html
+++ b/frontend/src/app/components/company/add-company/add-company.component.html
@@ -34,7 +34,7 @@
 
         <div class="form-group col-md-6">
           <label>Logo</label>
-          <input type="file" class="form-control"  name="logo" (change)="onFileSelected($event)">
+          <input type="file" class="form-control"  name="logo" (change)="onFileSelected($event)" multiple>
         </div>
 
         <div class="form-group col-md-6">
