--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -19,18 +19,27 @@
       </div>
 
       <div class="p-3">
-        <form #loginForm=ngForm (ngSubmit)="onSubmit()" class="form-horizontal m-t-20">
+        <form #loginForm=ngForm (ngSubmit)="onSubmit(form.value)" [formGroup]="form" class="form-horizontal m-t-20">
 
 
           <div class="form-group row">
             <div class="col-12">
-              <input type="email" class="form-control" placeholder="email" name="email" [(ngModel)]="form.email" required autofocus>
+              <input type="email" class="form-control" placeholder="email" name="email" formControlName="email" required autofocus>
+              <div *ngIf="submitted && f.email.errors">
+                <div *ngIf="f.email.errors.required" class="badge badge-danger">Email required</div>
+                <div *ngIf="f.email.errors.email" class="badge badge-danger">must be a valid email</div>
+              </div>
             </div>
           </div>
 
           <div class="form-group row">
             <div class="col-12">
-              <input class="form-control" name="password" type="password" placeholder="Password" [(ngModel)]="form.password" required>
+              <input class="form-control" name="password" type="password" placeholder="Password" formControlName="password" required>
+
+              <div *ngIf="submitted && f.password.errors">
+                <div *ngIf="f.password.errors.required" class="badge badge-danger">password required</div>
+                <div *ngIf="f.password.errors.minlength" class="badge badge-danger">at least 6 characters </div>
+              </div>
 
             </div>
           </div>
@@ -39,7 +48,7 @@
           <div class="form-group text-center row m-t-20">
             <div class="col-12">
               <!--<button class="btn btn-block btn-info">Log In</button>-->
-              <button type="submit" class="btn btn-block btn-info" [disabled]="!loginForm.valid">Sign in</button>
+              <button type="submit" class="btn btn-block btn-info" >Sign in</button>
 
 
             </div>
