--- a/frontend/src/app/components/user/add-employee/add-employee.component.html
+++ b/frontend/src/app/components/user/add-employee/add-employee.component.html
@@ -4,11 +4,11 @@
     <div class="col-md-2">
 
       <ul class="list-group">
-        <li class="list-group-item" ><button class="btn btn-block btn-info" (click)="onInfoClick(1)">Basic Info </button></li>
-        <li class="list-group-item"><button class="btn btn-block btn-info" (click)="onInfoClick(2)">Personal Info</button> </li>
-        <li class="list-group-item"><button class="btn btn-block btn-info" (click)="onInfoClick(3)">Joining Info</button> </li>
-        <li class="list-group-item"><button class="btn btn-block btn-info" (click)="onInfoClick(4)">Bank Info </button></li>
-        <li class="list-group-item"><button class="btn btn-block btn-info" (click)="onInfoClick(5)">Salary Info </button></li>
+        <li class="list-group-item " [class.active]="infoFlag == 1"  (click)="onInfoClick(1)"><button style="background: none; color: black; border: none;" class="btn btn-block ">Basic Info </button></li>
+        <li class="list-group-item" [class.active]="infoFlag == 2"><button style="background: none; color: black; border: none;" class="btn btn-block " (click)="onInfoClick(2)">Personal Info</button> </li>
+        <li class="list-group-item" [class.active]="infoFlag == 3"><button style="background: none; color: black; border: none;" class="btn btn-block" (click)="onInfoClick(3)">Joining Info</button> </li>
+        <li class="list-group-item" [class.active]="infoFlag == 4"><button style="background: none; color: black; border: none;" class="btn btn-block " (click)="onInfoClick(4)">Bank Info </button></li>
+        <li class="list-group-item" [class.active]="infoFlag == 5"><button style="background: none; color: black; border: none;" class="btn btn-block " (click)="onInfoClick(5)">Salary Info </button></li>
 
       </ul>
     </div>
