--- a/frontend/src/app/components/user/education/education.component.html
+++ b/frontend/src/app/components/user/education/education.component.html
@@ -66,13 +66,20 @@
 
 <ng-template #content let-c="close" let-d="dismiss">
   <div class="modal-header">
-    <h4 class="modal-title">Modal title</h4>
+    <h4 class="modal-title">Add Degree</h4>
     <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="modal-body">
-    <p>One fine body&hellip;</p>
+<form #education="ngForm" (ngSubmit)="onSubmit(content)">
+    <div class="form-group col-md-12">
+      <label>Degree</label>
+      <input type="text" name="degree" [(ngModel)]="newdegree" class="form-control" required>
+      <button style="margin-top: 32px" class="btn btn-success"  [disabled]="!education.valid"  >Submit</button>
+    </div>
+</form>
+
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-light" (click)="c('Close click')">Close</button>
