--- a/frontend/src/app/components/user/employee/employee.component.html
+++ b/frontend/src/app/components/user/employee/employee.component.html
@@ -4,35 +4,36 @@
 
     <div class="card-body">
       <a style=" float: right" class="btn btn-outline-primary mb-2 mr-2" routerLink="add" >Add New</a>  <br><br>
-      <table   id="example" class="table" >
-        <thead>
-        <tr>
-          <th>Name</th>
-          <th>Employee ID</th>
-          <th>Degisnation</th>
-          <th>Department</th>
-          <th>Action</th>
-        </tr>
+      <table datatable [dtOptions]="dtOptions" class="row-border hover"></table>
+      <!--<table   id="example" class="table" >-->
+        <!--<thead>-->
+        <!--<tr>-->
+          <!--<th>Name</th>-->
+          <!--<th>Employee ID</th>-->
+          <!--<th>Degisnation</th>-->
+          <!--<th>Department</th>-->
+          <!--<th>Action</th>-->
+        <!--</tr>-->
 
-        </thead>
-        <tbody *ngIf="checkEmployee()">
+        <!--</thead>-->
+        <!--<tbody *ngIf="checkEmployee()">-->
 
-          <tr  *ngFor="let emp of employee" >
-            <td>{{emp.firstName}}</td>
-            <td>{{emp.EmployeeId}}</td>
-            <td>{{emp.title}}</td>
-            <td>{{emp.departmentName}}</td>
-            <td><button>edit</button></td>
+          <!--<tr  *ngFor="let emp of employee" >-->
+            <!--<td>{{emp.firstName}}</td>-->
+            <!--<td>{{emp.EmployeeId}}</td>-->
+            <!--<td>{{emp.title}}</td>-->
+            <!--<td>{{emp.departmentName}}</td>-->
+            <!--<td><button>edit</button></td>-->
 
-          </tr>
-
-
-
+          <!--</tr>-->
 
 
-        </tbody>
 
-      </table>
+
+
+        <!--</tbody>-->
+
+      <!--</table>-->
 
 
     </div>
