--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -162,7 +162,7 @@
                 <a href="#">Forms</a>
                 <ul class="submenu">
                   <li><a routerLink="user/add">Add User</a></li>
-                  <li><a routerLink="employee">Add Employee</a></li>
+                  <li><a routerLink="employee">Employee</a></li>
                   <li><a routerLink="company/add">Add Company</a></li>
                   <li><a routerLink="configuration/department/add">Add Department</a></li>
                 </ul>
