--- a/frontend/src/app/components/user/add-employee/add-employee.component.html
+++ b/frontend/src/app/components/user/add-employee/add-employee.component.html
@@ -1,15 +1,15 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-2">
+    <div style="background: black;padding: 0; min-height: 860px; margin-left: -20px; margin-top:-33px;" class="col-md-2">
 
-      <ul class="list-group">
-        <li class="list-group-item " [class.active]="infoFlag == 1"  (click)="onInfoClick(1)"><button style="background: none; color: black; border: none;" class="btn btn-block ">Basic Info </button></li>
-        <li class="list-group-item" [class.active]="infoFlag == 2"><button style="background: none; color: black; border: none;" class="btn btn-block " (click)="onInfoClick(2)">Personal Info</button> </li>
-        <li class="list-group-item" [class.active]="infoFlag == 3"><button style="background: none; color: black; border: none;" class="btn btn-block " (click)="onInfoClick(3)">Education</button> </li>
-        <li class="list-group-item" [class.active]="infoFlag == 4"><button style="background: none; color: black; border: none;" class="btn btn-block" (click)="onInfoClick(4)">Joining Info</button> </li>
-        <li class="list-group-item" [class.active]="infoFlag == 5"><button style="background: none; color: black; border: none;" class="btn btn-block " (click)="onInfoClick(5)">Bank Info </button></li>
-        <li class="list-group-item" [class.active]="infoFlag == 6"><button style="background: none; color: black; border: none;" class="btn btn-block " (click)="onInfoClick(6)">Salary Info </button></li>
+      <ul style="margin-top: 25px; margin-left: 20px;" class="list-group">
+        <li class="list-group-item " [class.active]="infoFlag == 1"  (click)="onInfoClick(1)"><button style="background: none; color: white; border: none;" class="btn btn-block ">Basic Info </button></li>
+        <li class="list-group-item" [class.active]="infoFlag == 2"><button style="background: none; color: white; border: none;" class="btn btn-block " (click)="onInfoClick(2)">Personal Info</button> </li>
+        <li class="list-group-item" [class.active]="infoFlag == 3"><button style="background: none; color: white; border: none;" class="btn btn-block " (click)="onInfoClick(3)">Education</button> </li>
+        <li class="list-group-item" [class.active]="infoFlag == 4"><button style="background: none; color: white; border: none;" class="btn btn-block" (click)="onInfoClick(4)">Joining Info</button> </li>
+        <li class="list-group-item" [class.active]="infoFlag == 5"><button style="background: none; color: white; border: none;" class="btn btn-block " (click)="onInfoClick(5)">Bank Info </button></li>
+        <li class="list-group-item" [class.active]="infoFlag == 6"><button style="background: none; color: white; border: none;" class="btn btn-block " (click)="onInfoClick(6)">Salary Info </button></li>
 
       </ul>
     </div>
@@ -27,3 +27,7 @@
   </div>
 
 </div>
+
+
+
+
