--- a/frontend/src/app/components/user/employee/employee.component.html
+++ b/frontend/src/app/components/user/employee/employee.component.html
@@ -22,7 +22,7 @@
           <td>{{emp.EmployeeId}}</td>
           <td>{{emp.title}}</td>
           <td>{{emp.departmentName}}</td>
-          <td>  <button class="btn btn-danger" [routerLink]="['edit', emp.id]"   style="margin-left: 20px;"> Edit</button></td>
+          <td>  <button class="btn btn-danger" [routerLink]="['edit', emp.empid]"   style="margin-left: 20px;"> Edit</button></td>
 
         </tr>
 
