--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -161,12 +161,30 @@
               <li class="has-submenu">
                 <a href="#">Forms</a>
                 <ul class="submenu">
-                  <li><a routerLink="user/add">Add User</a></li>
-                  <li><a routerLink="employee">Employee</a></li>
-                  <li><a routerLink="company/add">Add Company</a></li>
                   <li><a routerLink="configuration/department/add">Add Department</a></li>
                 </ul>
               </li>
+
+              <li class="has-submenu">
+                <a href="#">User</a>
+                <ul class="submenu">
+                  <li><a routerLink="user/add">Add User</a></li>
+                </ul>
+              </li>
+              <li class="has-submenu">
+                <a href="#">Employee</a>
+                <ul class="submenu">
+                  <li><a routerLink="employee">Employee</a></li>
+                  <li><a routerLink="employee/add">Add Employee</a></li>
+                </ul>
+              </li>
+              <li class="has-submenu">
+                <a href="#">Company</a>
+                <ul class="submenu">
+                  <li><a routerLink="company/add">Company Info</a></li>
+                </ul>
+              </li>
+
               <li class="has-submenu">
                 <a href="#">Icons</a>
                 <ul class="submenu">
@@ -191,16 +209,16 @@
             </ul>
           </li>
 
-          <li class="has-submenu">
-            <a href="#"><i class="ti-files"></i>Pages</a>
-            <ul class="submenu megamenu">
-              <li>
-                <ul>
-                  <li><a routerLink="/login">Login</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
+          <!--<li class="has-submenu">-->
+            <!--<a href="#"><i class="ti-files"></i>Pages</a>-->
+            <!--<ul class="submenu megamenu">-->
+              <!--<li>-->
+                <!--<ul>-->
+                  <!--<li><a routerLink="/login">Login</a></li>-->
+                <!--</ul>-->
+              <!--</li>-->
+            <!--</ul>-->
+          <!--</li>-->
 
         </ul>
         <!-- End navigation menu -->
