--- a/frontend/src/app/components/configuration/department/add-department/add-department.component.html
+++ b/frontend/src/app/components/configuration/department/add-department/add-department.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card container">
   <div class="card-header-pills">
     <h3 align="center" style="font-family: 'Righteous', cursive;">Add Department</h3>
   </div>
