--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -48,7 +48,7 @@
           <div class="form-group text-center row m-t-20">
             <div class="col-12">
               <!--<button class="btn btn-block btn-info">Log In</button>-->
-              <button type="submit" class="btn btn-block btn-info" >Sign in</button>
+              <button type="submit" class="btn btn-block btn-info" style="text-align: center" >Sign in</button>
 
 
             </div>
