--- a/frontend/src/app/components/user/add-employee/add-employee.component.html
+++ b/frontend/src/app/components/user/add-employee/add-employee.component.html
@@ -5,7 +5,7 @@
 
       <ul style="margin-top: 25px; margin-left: 20px;" class="list-group">
         <li class="list-group-item " [class.active]="infoFlag == 1"  (click)="onInfoClick(1)"><button style="background: none; color: white; border: none;" class="btn btn-block ">Basic Info </button></li>
-        <li class="list-group-item" [class.active]="infoFlag == 2"><button style="background: none; color: white; border: none;" class="btn btn-block " (click)="onInfoClick(2)">Personal Info</button> </li>
+        <li class="list-group-item"  [class.active]="infoFlag == 2"><button style="background: none; color: white; border: none;" class="btn btn-block " (click)="onInfoClick(2)">Personal Info</button> </li>
         <li class="list-group-item" [class.active]="infoFlag == 3"><button style="background: none; color: white; border: none;" class="btn btn-block " (click)="onInfoClick(3)">Education</button> </li>
         <li class="list-group-item" [class.active]="infoFlag == 4"><button style="background: none; color: white; border: none;" class="btn btn-block" (click)="onInfoClick(4)">Joining Info</button> </li>
         <li class="list-group-item" [class.active]="infoFlag == 5"><button style="background: none; color: white; border: none;" class="btn btn-block " (click)="onInfoClick(5)">Bank Info </button></li>
@@ -17,7 +17,7 @@
 
     <div class="col-md-10">
       <app-basic-info *ngIf="infoFlag ==1" [empid]="empid"></app-basic-info>
-      <app-personal-info *ngIf="infoFlag ==2"></app-personal-info>
+      <app-personal-info *ngIf="infoFlag ==2" [empid]="empid"></app-personal-info>
       <app-education *ngIf="infoFlag ==3"></app-education>
       <app-joining-info *ngIf="infoFlag ==4"></app-joining-info>
       <app-bank-info *ngIf="infoFlag ==5"></app-bank-info>
