--- a/frontend/src/app/components/user/personal-info/personal-info.component.html
+++ b/frontend/src/app/components/user/personal-info/personal-info.component.html
@@ -8,25 +8,28 @@
 
       <div class="form-group col-md-6">
         <label>Fathers Name</label>
-        <input type="text" class="form-control" name="fatherName" placeholder="father">
+        <input type="text" class="form-control" name="fatherName" [(ngModel)]="employeePersonalForm.fatherName" placeholder="father's name">
       </div>
 
       <div class="form-group col-md-6">
         <label>Mothers Name</label>
-        <input type="text" class="form-control" name="motherName" placeholder="mother">
+        <input type="text" class="form-control" name="motherName" [(ngModel)]="employeePersonalForm.motherName" placeholder="mother's name">
       </div>
 
       <div class="form-group col-md-6">
         <label>Marital Status</label>
-        <select class="form-control" name="maritalStatus">
-          <option>Single</option>
-          <option>Married</option>
+        <select class="form-control" name="maritalStatus" [(ngModel)]="employeePersonalForm.maritalStatus" >
+          <option value="">Select Status</option>
+          <option value="S">Single</option>
+          <option value="M">Married</option>
+          <option value="W">Devorced</option>
         </select>
       </div>
 
+
       <div class="form-group col-md-6">
         <label>Spouse Name</label>
-        <input type="text" class="form-control" name="spouseName" placeholder="spouse">
+        <input type="text" class="form-control" name="spouseName" [(ngModel)]="employeePersonalForm.spouseName" placeholder="spouse">
       </div>
 
       <div class="form-group col-md-6">
@@ -47,7 +50,7 @@
 
       <div class="form-group col-md-6">
         <label>National Id</label>
-        <input type="text" class="form-control" name="nationalId" placeholder="National Id">
+        <input type="text" class="form-control" name="nationalId" [(ngModel)]="employeePersonalForm.nationalId" placeholder="National Id">
       </div>
 
 
@@ -59,19 +62,19 @@
 
       <div class="form-group col-md-6">
         <label>Present Street</label>
-        <input type="text" class="form-control" name="presentStreet" placeholder="present street">
+        <input type="text" class="form-control" name="presentStreet" [(ngModel)]="employeePersonalForm.presentStreet" placeholder="present street">
       </div>
 
       <div class="form-group col-md-6">
         <label>Present Police Station</label>
-        <input type="text" class="form-control" name="presentPS" placeholder="present PS">
+        <input type="text" class="form-control" name="presentPS" [(ngModel)]="employeePersonalForm.presentPS" placeholder="present PS">
       </div>
 
 
 
       <div class="form-group col-md-6">
         <label>Present Zipcod</label>
-        <input type="text" class="form-control" name="presentZipcod" placeholder="Present Zip">
+        <input type="text" class="form-control" name="presentZipcod" [(ngModel)]="employeePersonalForm.presentZipcod" placeholder="Present Zip">
       </div>
 
       <div class="col-md-12">
@@ -80,19 +83,23 @@
 
       <div class="form-group col-md-6">
         <label>Permanent Street</label>
-        <input type="text" class="form-control" name="permanentStreet" placeholder="permanent street">
+        <input type="text" class="form-control" name="permanentStreet" [(ngModel)]="employeePersonalForm.permanentStreet" placeholder="permanent street">
       </div>
 
       <div class="form-group col-md-6">
         <label>Permanent Police Station</label>
-        <input type="text" class="form-control" name="permanentPS" placeholder="permanent PS">
+        <input type="text" class="form-control" name="permanentPS" [(ngModel)]="employeePersonalForm.presentPS" placeholder="permanent PS">
       </div>
 
 
 
       <div class="form-group col-md-6">
         <label>Permanent Zipcod</label>
-        <input type="text" class="form-control" name="permanentZipcod" placeholder="permanent Zip">
+        <input type="text" class="form-control" name="permanentZipcod" [(ngModel)]="employeePersonalForm.presentZipcod" placeholder="permanent Zip">
+      </div>
+
+      <div class="form-group col-md-12">
+        <button class="btn btn-success" (click)="submit()">Save</button>
       </div>
 
 
