--- a/frontend/src/app/components/user/bank-info/bank-info.component.html
+++ b/frontend/src/app/components/user/bank-info/bank-info.component.html
@@ -7,17 +7,21 @@
         <div class="row">
             <div class="form-group col-md-6">
                 <label>Pf Acount</label>
-                <input type="text" class="form-control" name="pfAccountNo">
+                <input type="text" class="form-control" [(ngModel)]="employeeBankForm.pfAccountNo" name="pfAccountNo">
             </div>
 
             <div class="form-group col-md-6">
                 <label>Bank Acount</label>
-                <input type="text" class="form-control" name="bankAccountNo">
+                <input type="text" class="form-control" [(ngModel)]="employeeBankForm.bankAccountNo" name="bankAccountNo">
             </div>
 
             <div class="form-group col-md-6">
                 <label>Tin Id</label>
-                <input type="text" class="form-control" name="tinId">
+                <input type="text" class="form-control" [(ngModel)]="employeeBankForm.tinId" name="tinId">
+            </div>
+
+            <div class="col-md-12">
+                <button class="btn btn-success" (click)="submit()">Save</button>
             </div>
 
 
