--- a/frontend/src/app/components/user/joining-info/joining-info.component.html
+++ b/frontend/src/app/components/user/joining-info/joining-info.component.html
@@ -39,12 +39,12 @@
 
       <div class="form-group col-md-6">
         <label>Schedule In Time</label>
-        <input type="text" name="scheduleInTime" placeholder="in time" [(ngModel)]="employeeJoiningForm.scheduleInTime" class="form-control">
+        <input type="time" name="scheduleInTime" placeholder="in time" [(ngModel)]="employeeJoiningForm.scheduleInTime" class="form-control">
       </div>
 
       <div class="form-group col-md-6">
         <label>Schedule Out Time</label>
-        <input type="text" name="scheduleOutTime" placeholder="out time" [(ngModel)]="employeeJoiningForm.scheduleOutTime" class="form-control">
+        <input type="time" name="scheduleOutTime" placeholder="out time" [(ngModel)]="employeeJoiningForm.scheduleOutTime" class="form-control">
       </div>
 
       <div class="form-group col-md-6">
